PROJECT (systemsettings)
find_package(KDE4 REQUIRED)

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -pedantic" )
INCLUDE (KDE4Defaults)
ADD_DEFINITIONS (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/core ${CMAKE_BINARY_DIR} ${KDE4_INCLUDES})

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(classic)
ADD_SUBDIRECTORY(icons)
