#temporary till KDE4 and it can be renamed
xdg_apps_DATA = defaultapplication.desktop kcmfontinst.desktop

xdg_menu_DATA = system-preferences.menu

xdg_mergedmenu_DATA = system-preferences-merge.menu
xdg_mergedmenudir = $(xdg_menudir)/applications-merged

xdg_directory_DATA = \
kde-settings-appearance.directory \
kde-settings-panel.directory \
kde-settings-useraccount.directory \
kde-settings-system.directory \
kde-settings-power.directory \
kde-settings-sharing.directory \
kde-settings-networkconnections.directory \
system-preferences.directory

install-data-local:
	kbuildsycoca
