#temporary till KDE4 and it can be renamed
xdg_apps_DATA = audioencoding.desktop defaultapplication.desktop kcmfontinst.desktop kcm_knetworkconfmodule_ss.desktop laptoppowermanagement.desktop medianotifications.desktop

xdg_menu_DATA = system-settings.menu

xdg_mergedmenu_DATA = system-settings-merge.menu
xdg_mergedmenudir = $(xdg_menudir)/applications-merged

xdg_directory_DATA = \
kde-settings-accessibility_ss.directory \
kde-settings-advanced.directory \
kde-settings-advancedusersettings.directory \
kde-settings-appearance.directory \
kde-settings-bluetooth.directory \
kde-settings-computeradministration.directory \
kde-settings-defaultapplications.directory \
kde-settings-general.directory \
kde-settings-keyboardmouse.directory \
kde-settings-laptops.directory \
kde-settings-looknfeel2.directory \
kde-settings-networkconnections.directory \
kde-settings-networkconnectivity.directory \
kde-settings-networksettings.directory \
kde-settings-notifications.directory \
kde-settings-panel.directory \
kde-settings-personal.directory \
kde-settings-power.directory \
kde-settings-regional.directory \
kde-settings-sharing.directory \
kde-settings-splashscreen.directory \
kde-settings-system.directory \
kde-settings-useraccount.directory \
kde-settings-windowbehavior.directory \
system-settings.directory

install-data-local:
	kbuildsycoca
